thesis finished (i hope so)

--- a/paper/Cache_Replacement_Policies.tex
+++ b/paper/Cache_Replacement_Policies.tex
@@ -11,7 +11,7 @@ The LRU (Least Recently Used) strategy removes the page which wasn't used for th
 
 The LFU (Least Frequently Used) strategy removes the page which was accessed the least number of times.
 
-The CLOCK strategy, also called the second chance strategy, traverses the frames in a round robin way. Each frame has an access flag which can either have the value zero or one. When a page needs to be removed, the algorithm starts iterating over the frames, going to the first one once it reaches the end. If the current frame has the value of its flag equal to zero, its page is removed and the search is finished. If, on the other hand, its flag is equal to one, the flag is set to zero, and the algorithm continues to the next frame, hence the 'second chance' name.
+The CLOCK strategy, also called the second chance strategy, traverses the frames in a round robin way. Each frame has an access flag which can either have the value zero or one. When a page needs to be removed, the algorithm starts iterating over the frames, going to the first one once it reaches the end. If the current frame has the value of its flag equal to zero, its page is removed and the search is finished. If, on the other hand, its flag is equal to one, the flag is set to zero, and the algorithm continues to the next frame, hence the 'second chance' name. Each time a frame is accessed, its flag is set to one.
 
 The OPT (optimal) strategy removes the page that won't be used for the longest time in the future. This strategy isn't achievable because it requires the knowledge of the future page requests. It's significance is theoretical, because it can set an upper limit to what is possible to achieve.
 
@@ -32,7 +32,7 @@ The general cache replacement policy looks as follows:
 \text{ from } \textit{frame;}$
 \State $\indent \indent \text{put } \textit{page} \text{ in } \textit{frame;} $
 \State $\indent \text{end if}$
-\State $\text{end while}$
+\State $\text{end for}$
 \end{algorithmic}
 \end{algorithm}
 
