--- a/paper/Experimental_Settings.tex
+++ b/paper/Experimental_Settings.tex
@@ -13,9 +13,9 @@ To avoid the combinatorial explosion of testing the Cartesian product of differe
 
 The parameters will be tested in the following order: selection operator (which is expected to have a tremendous impact on the final results), mutation rate, population size, codon count and maximum number of wrappings (which is expected to have a minimal impact on the final results).
 
-The trace file used for parameter optimization was the 'swim.trace' file, and the data used for parameter optimization consisted of the first 20000 requests. Each page index was modulated by 1000. The reason behind this decision was the goal to provide a unique setting for generating and testing our strategies, because it felt natural to train them and test them using the data with the same number of different pages. Retrospectively speaking, tampering with the trace file data in this way may have turned out to be a bad idea and may have foiled the parameter optimization process, so this decision was abandoned once the actual experiments began. Still, I believe that the parameter optimization wasn't completely futile, and that it still merited some valuable information about good algorithm parameter values.
+The trace file used for parameter optimization was the 'swim.trace' file, and the data used for parameter optimization consisted of the first 20000 requests from the trace file. Each page index was modulated by 1000. The reason behind this decision was the goal to provide a unique setting for generating and testing our strategies, because it felt natural to train them and test them using the data with the same number of different pages. Retrospectively speaking, tampering with the trace file data in this way may have turned out to be a bad idea and may have foiled the parameter optimization process, so this decision was abandoned once the actual experiments began. Still, I believe that the parameter optimization wasn't completely futile, and that it still merited some valuable information about good algorithm parameter values.
 
-Since the genetic algorithm is inherently stochastic, each experiment will be repeated 10 times, and the median value of these runs will be used as the final result. If the median value turns out to be a bad measure for comparing different parameter configurations (for example, if the median value of multiple configurations is the same), then the average value will be used instead.
+Since the genetic algorithm is inherently stochastic, each experiment will be repeated 10 times, and the median value of these runs will be used as the final result. If the median value turns out to be a bad measure for comparing different parameter configurations (for example, if the median values of multiple configurations are the same), then the average value will be used instead.
 
 Once all the parameters have been optimized, the algorithm will be run using these parameters on different cache sizes, and the generated strategies will be compared to the classical heuristic strategies for cache management.
 
