--- a/paper/literatura.bib
+++ b/paper/literatura.bib
@@ -28,13 +28,13 @@
 
 @Article{megane2022coevolutionary,
 	author = {Mégane, Jessica and Lourenço, Nuno and Machado, Penousal},
-	title = {Co-evolutionary Probabilistic Structured Grammatical Evolution},
+	title = {Co-evolutionary {P}robabilistic {S}tructured {G}rammatical {E}volution},
 	year = {2022}
 }
 
 @Article{lourenco2018structured,
 	author = {Lourenço, Nuno and Assunção, Filipe and Pereira, Francisco B. and Costa, Ernesto and Machado, Penousal},
-	title = {Structured Grammatical Evolution: A Dynamic Approach},
+	title = {Structured {G}rammatical {E}volution: {A} {D}ynamic {A}pproach},
 	publisher = {Springer},
 	year = {2018}
 }
@@ -50,6 +50,13 @@
 	author = {Čupić, Marko},
 	title = {Umjetna inteligencija: Evolucijsko računarstvo},
 	year = {2019}
+}
+
+@Book{koza1992geneticprogramming,
+	author = {Koza, John R.},
+	title = {Genetic {P}rogramming: {O}n the {P}rogramming of {C}omputers by {M}eans of {N}atural {S}election},
+	publisher = {MIT Press},
+	year = {1992}
 }
 
 @Misc{diagrams,
