--- a/paper/zavrsni.tex
+++ b/paper/zavrsni.tex
@@ -66,6 +66,8 @@
 
 \listoffigures
 
+\listofalgorithms
+
 \appendix
 \chapter{Software architecture}
 
@@ -75,15 +77,18 @@
 \begin{sazetak}
 Genetic programming is a branch of evolutionary computing in which the population consists of computer programs. Grammatical evolution is a popular grammar-based approach to genetic programming, capable of evolving programs in an arbitrary language, using fixed-length arrays of integers as genotypes, a context-free grammar for the definition of the language, and a genotype-phenotype mapping which uses the specified grammar to map integer arrays to computer programs. Evolving cache replacement policies is a popular benchmark problem in the field of genetic programming. The topic of this thesis is using grammatical evolution to evolve cache replacement policies. Generated strategies are compared to classic heuristic approaches to cache management, including  FIFO, LRU and CLOCK algorithms.
 
-\kljucnerijeci{evolutionary computing, genetic programming, genetic algorithm, grammatical evolution, cache replacement policies, optimization, formal grammars}
+\kljucnerijeci{evolutionary computing, genetic programming, genetic algorithm, grammatical evolution, cache replacement policies, optimization, formal grammars, ECF}
 \end{sazetak}
+
+
+\newpage
 
 % TODO: Navedite naslov na engleskom jeziku.
 \engtitle{Evolucija strategija zamjene stranica korištenjem gramatičke evolucije}
 \begin{abstract}
 Genetsko programiranje je grana evolucijskog računarstva u kojoj populaciju čine računalni programi. Gramatička evolucija je popularan pristup genetskom programiranju koji se bazira na formalnim gramatikama, sposoban evoluirati programe u proizvoljnom jeziku, koristeći polja cijelih brojeva fiksne duljine za genotipe, kontekstno neovisnu gramatiku za definiciju jezika, i mapiranje s genotipa na fenotip koje koristi definiranu gramatiku za preslikavanje s polja cijelih brojeva na računalne programe. Evolucija strategija zamjene stranica je popularan problem u području genetskog programiranja. Tema ovog rada je korištenje gramatičke evolucije za evoluiranje strategija zamjene stranica. Generirane strategije su uspoređene s klasičnim heurističkim pristupima za upravljanje memorijom, uključujući algoritme FIFO, LRU i CLOCK.
 
-\keywords{evolucijsko računarstvo, genetsko programmiranje, genetski algoritam, gramatička evolucija, strategije zamjene stranica, optimizacija, formalne gramatike}
+\keywords{evolucijsko računarstvo, genetsko programmiranje, genetski algoritam, gramatička evolucija, strategije zamjene stranica, optimizacija, formalne gramatike, ECF}
 \end{abstract}
 
 \end{document}
