--- a/paper/Parameter_Optimization.tex
+++ b/paper/Parameter_Optimization.tex
@@ -4,13 +4,13 @@ Before starting the experiments, some average non-extreme values for the paramet
 The fitness values represent the number of hits during the simulation of a strategy using a dataset which contains 20000 requests.
 
 \subsection{Selection operator}
-The first parameter that was optimized was the selection operator. The first selection operator that was considered was the fitness proportional roulette wheel-selection in a generational genetic algorithm, and the second selection operator that was considered was the tournament selection in a steady-state genetic algorithm.
+The first parameter that was optimized was the selection operator. The first selection operator that was considered was the fitness proportional roulette-wheel selection in a generational genetic algorithm, and the second selection operator that was considered was the tournament selection in a steady-state genetic algorithm.
 
 The median fitness in both of these runs was 1907, so the average fitness was used for analysis.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.55]{box_plot_01.png}
+	\includegraphics[scale=0.55]{bar_plot_01.png}
 	\caption{Results of optimizing the selection operator}
 \end{figure}
 
@@ -25,7 +25,7 @@ All of these runs had the median fitness of 18999, so the average fitness was us
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.55]{box_plot_02.png}
+	\includegraphics[scale=0.55]{bar_plot_02.png}
 	\caption{Results of optimizing the mutation rate}
 \end{figure}
 
@@ -36,7 +36,7 @@ The third parameter that was optimized was the population size. The values that 
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.55]{box_plot_03.png}
+	\includegraphics[scale=0.55]{bar_plot_03.png}
 	\caption{Results of optimizing the population size}
 \end{figure}
 
@@ -47,7 +47,7 @@ The fourth parameter that was optimized was the codon count. The values that wer
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.55]{box_plot_04.png}
+	\includegraphics[scale=0.55]{bar_plot_04.png}
 	\caption{Results of optimizing the population size}
 \end{figure}
 
@@ -58,7 +58,7 @@ The fifth and final parameter that was optimized was the maximum number of wrapp
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.55]{box_plot_05.png}
+	\includegraphics[scale=0.55]{bar_plot_05.png}
 	\caption{Results of optimizing the maximum number of wrappings}
 \end{figure}
 
